change file paths

--- a/Projekt/Projekt 0/Demo 2/Demo2.ipynb
+++ b/Projekt/Projekt 0/Demo 2/Demo2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -26,11 +26,7 @@
     "\n",
     "\n",
     "    # Running locally on Windows: set your data folder here\n",
-    "path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Demo 2\\data\\\\\"\n",
-    "\n",
-    "# Vid mountning läggs nu en ny katalog som heter drive till i mappen content. I den ligger MyDrive som är din google drive med dina mappar/filer. \n",
-    "# För att notebooken nu inte ska läsa från content utan från rätt plats på din drive kan du ange sökvägen som en stringvariabel. \n",
-    "# Denna läggs sedan till innan de filer som läses in senare.\n"
+    "path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt 0\\Demo 2\\data\\\\\""
    ]
   },
   {
@@ -426,7 +422,7 @@
     "from IPython.display import HTML, display\n",
     "\n",
     "# Set local Windows data folder (no leading spaces)\n",
-    "path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Demo 2\\data\"\n",
+    "path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt 0\\Demo 2\\data\"\n",
     "path = os.path.normpath(path)  # normalize path separators\n",
     "\n",
     "# If running in Colab, mount if available (safe guard)\n",
@@ -790,7 +786,7 @@
    "source": [
     "\n",
     "# ensure path is set earlier; normalize but do NOT rely on trailing slash\n",
-    "path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Demo 2\\data\"\n",
+    "path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt 0\\Demo 2\\data\"\n",
     "path = os.path.normpath(path)\n",
     "\n",
     "# full filenames using os.path.join\n",
@@ -1195,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1210,10 +1206,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# use os.path.join for kepler config file (avoid string concat)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m config_path = \u001b[43mos\u001b[49m.path.join(path, \u001b[33m\"\u001b[39m\u001b[33mkepler_config.pkl\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m config = pickle.load(\u001b[38;5;28mopen\u001b[39m(config_path, \u001b[33m'\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m      5\u001b[39m \u001b[38;5;28mmap\u001b[39m = KeplerGl(height=\u001b[32m920\u001b[39m, config=config)    \u001b[38;5;66;03m#Skapa en kepler karta.\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'os' is not defined"
      ]
     }
    ],
