--- a/Projekt/Projekt 0/Demo 2/Demo2.ipynb
+++ b/Projekt/Projekt 0/Demo 2/Demo2.ipynb
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1215,14 +1215,10 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pickle' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# use os.path.join for kepler config file (avoid string concat)\u001b[39;00m\n\u001b[32m      5\u001b[39m config_path = os.path.join(path, \u001b[33m\"\u001b[39m\u001b[33mkepler_config.pkl\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m config = \u001b[43mpickle\u001b[49m.load(\u001b[38;5;28mopen\u001b[39m(config_path, \u001b[33m'\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m'\u001b[39m))\n\u001b[32m      8\u001b[39m \u001b[38;5;28mmap\u001b[39m = KeplerGl(height=\u001b[32m920\u001b[39m, config=config)    \u001b[38;5;66;03m#Skapa en kepler karta.\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;28mmap\u001b[39m.add_data(data=B1.copy(), name=\u001b[33m'\u001b[39m\u001b[33mZones\u001b[39m\u001b[33m'\u001b[39m)   \u001b[38;5;66;03m#Lägg till en tabell som kartan kan använda.\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'pickle' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
      ]
     }
    ],
@@ -1257,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "eatfzQDB1W-i"
    },
