Förmiddag projekt 1 arbete

--- a/Projekt/Projekt_1/Notebookuppgift.ipynb
+++ b/Projekt/Projekt_1/Notebookuppgift.ipynb
@@ -902,6 +902,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a4a7dbb",
+   "metadata": {},
+   "source": [
+    "Beskrivning och resonemang  av histogram "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dd26b24e",
    "metadata": {},
    "source": [
