--- a/Projekt/Projekt_1/Notebookuppgift.ipynb
+++ b/Projekt/Projekt_1/Notebookuppgift.ipynb
@@ -2316,12 +2316,12 @@
    "metadata": {},
    "source": [
     "**B) Regressionsanalys**\n",
-    "Låt variabeln pt_share (andelen i procent av resorna som sker med kollektivtrafik) vara svarsvariabeln (Y). Välj ut åtta indikatorer du tror att Y kan bero på. Ta även med en dummyvariabel, till exempel kommungrupp. Se länken ovan om Categorical variables. För att välja ut ett subset av kolumnerna i en pandas-tabell använd filter (kolumnnamnen är bara exempel)\n"
+    "Vi gör här en scatter plot där vi låtert variabeln pt_share (andelen i procent av resorna som sker med kollektivtrafik) vara Y och tillgången till bredband är X\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "819fccc8",
    "metadata": {},
    "outputs": [
@@ -3210,9 +3210,7 @@
     }
    ],
    "source": [
-    "#gör ett subset av datframen med de valda variablerna \n",
     "\n",
-    "df_subset = df.filter([\"pt_share\", \"U85001\", \"U85421\", \"N00914\", \"N07900\", \"U01803\", \"N02937\", \"Kommungrupp\",\"N00905\"], axis=1)\n",
     "\n",
     "#Gör en scatterplot där du plottar Y mot förklaringsvariabeln du valde i A. \n",
     "fig = px.scatter(df, x=\"N07900\", y=\"pt_share\", title=\"pt_share vs tillgång på bredband om minst 100 Mbit/s (%)\", template=\"simple_white\", labels={\"N07900\": \"Andel (%)\", \"pt_share\": \"Andel med kollektivtrafik (%)\"})\n",
@@ -3224,12 +3222,12 @@
    "id": "744aa7a5",
    "metadata": {},
    "source": [
-    "Scatter plot beskrivning och resonemang "
+    "Utifrån scatter plotten är det mycket svårt att se något direkt mönster, i den övre änden av tillgång till snabbt bredband syns visserligen fler kommuner med hög andel kollektivtrafikresor men det finns många med låg andel kollektivtrafikresor också. Längst i övre högra hörnet med mycket hög andel med snabbt bredbrand och hög andel kollektivtrafikresor ser vi ett antal kommuner vilket verkar vara våra storstadskommuner. Redan här kan vi se att indakatorn förmodligen inte kommer vara användbar i en regresionsmodell för pt_share. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8ab7b14f",
    "metadata": {},
    "outputs": [
@@ -4138,6 +4136,9 @@
     }
    ],
    "source": [
+    "#gör ett subset av datframen med de valda variablerna \n",
+    "\n",
+    "df_subset = df.filter([\"pt_share\", \"U85001\", \"U85421\", \"N00914\", \"N07900\", \"U01803\", \"N02937\", \"Kommungrupp\",\"N00905\"], axis=1)\n",
     "#scatter plot matrix av alla 8 valda variabler \n",
     "fig = px.scatter_matrix(df_subset, dimensions=[\"pt_share\", \"U85001\", \"U85421\", \"N00914\", \"N07900\", \"U01803\", \"N02937\",\"N00905\", \"Kommungrupp\"], title=\"Scatter plot matrix av 8 valda variabler\", height =1000, width=1300)\n",
     "fig.show()\n"
@@ -4148,7 +4149,7 @@
    "id": "44c4d4da",
    "metadata": {},
    "source": [
-    "Valda variabler som verkar ha ett samband N02937 invånare per km^2 U85001 Nettokostnad kollektivtrafik N00905 mediannettoinkomst"
+    "Koden väljer ut åtta av de tillgängliga versionerna och gör en scatter plot matrix tillsammans med pt share. (mer om scatter plot matrix) utifrån detta kan vi titta på raden ptshare där x är ptshare och på samma sätt som den individuella pt share och N07900. Valda variabler som verkar ha ett samband med pt_share alltså att det verkar finnas en tydlig ökning/minsking i scatter plotten när det är plootat mot pt_share är: N02937 invånare per km^2, U85001 Nettokostnad kollektivtrafik, N00905 mediannettoinkomst. Dessa indikatorer verkar har ett samband och indikatorerna verkar också rimliga. Ökad befolkningstäthet bör ha en positiv effekt på kollektivtrafikresande då det möjligör fler att fångas upp av samma hållplats eller linje. Hög nettokostnad för kollektitrafik kan leda till att man väljer andra färdessätt och scatter plotten för N00905 verkar visa att kommuner med högre medianettoinkomst har högre kollektivtrafikanvänding, troligtvis kopplat till att dessa kommuner ofta är större städer eller förorter."
    ]
   },
   {
@@ -4207,6 +4208,14 @@
     "model_defined = smf.ols(formula='pt_share ~ N02937 + U85001 + N00905+C(Kommungrupp)', data=df_subset)\n",
     "model_trained = model_defined.fit()\n",
     "print(model_trained.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e864dd40",
+   "metadata": {},
+   "source": [
+    "Genom att använda "
    ]
   },
   {
