--- a/Projekt/Projekt_2/notebookuppgift2.ipynb
+++ b/Projekt/Projekt_2/notebookuppgift2.ipynb
@@ -5,13 +5,117 @@
    "execution_count": null,
    "id": "8e0611d0",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total befolkning: 164804\n",
+      "Totalt antal arbetsplatser: 77562\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# Sökvägar till parquet-filerna\n",
+    "age_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data\\deso_age_ume.parquet\"\n",
+    "pop_work_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data\\deso_pop_work_ume.parquet\"\n",
+    "pop_emp_ume = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data\\deso_emp_ume.parquet\"\n",
+    "# Läs in data från parquet-filerna skapa data frames \n",
+    "df_age = pd.read_parquet(age_path)\n",
+    "df_pop_work = pd.read_parquet(pop_work_path)\n",
+    "df_emp = pd.read_parquet(pop_emp_ume)\n",
+    "# Gör kolumner med numeriska värden till numeriska datatyper\n",
+    "# Räkna ut och print total befolkning och totalt antal arbetsplatser\n",
+    "totbef_num =pd.to_numeric(df_age['Totalt'], errors='coerce')\n",
+    "print(\"Total befolkning:\", totbef_num.sum())\n",
+    "dagbef_num = pd.to_numeric(df_pop_work['Sysselsatt'], errors='coerce')\n",
+    "print(\"Totalt antal arbetsplatser:\", dagbef_num.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "277ec7ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        DESO  Alder_0_6  Alder_7_15  Alder_16_1  Alder_20_2  Alder_25_4  \\\n",
+      "0  2401A0010        109         135          55          57         280   \n",
+      "1  2401A0020        100         104          75          62         265   \n",
+      "2  2401B2010        108         156          49          57         334   \n",
+      "3  2401C1010         49          63          29          24         130   \n",
+      "4  2401C1020        136         212          98         131         433   \n",
+      "\n",
+      "   Alder_45_6  Alder_65  Totalt  Sysselsatt  EjSysselsatt  retail  \\\n",
+      "0         442       482    1565         649           110    68.0   \n",
+      "1         389       404    1400         621            95    25.0   \n",
+      "2         320       340    1369         595           141     1.0   \n",
+      "3         180       237     716         298            46     1.0   \n",
+      "4         422       542    1978         794           158    13.0   \n",
+      "\n",
+      "   hospitality  business  government  education  healthcare  recreation  total  \n",
+      "0         14.0      68.0        15.0       69.0        14.0        10.0  824.0  \n",
+      "1          5.0      51.0         0.0       27.0         0.0         0.0  322.0  \n",
+      "2          2.0      25.0         0.0        9.0         0.0         0.0  258.0  \n",
+      "3          0.0       1.0         0.0        1.0         0.0         0.0   12.0  \n",
+      "4          5.0      16.0         1.0        9.0         0.0         2.0  169.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Slå ihop data frames till en enda data frame\n",
+    "df = pd.concat([df_age, df_pop_work, df_emp], axis=1)\n",
+    "# Ta bort dubbletter av kolumner\n",
+    "df = df.loc[:, ~df.columns.duplicated()]\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f728de23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "zones_path= r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data\\deso_zones_ume.parquet\"\n",
+    "net_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data\\roadnet_ume_municipality.parquet\"\n",
+    "\n",
+    "gpd.read_parquet(zones_path)\n",
+    "gpd.read_parquet(net_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f28410e",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "geo",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
