--- a/Projekt/Projekt_2/notebookuppgift2.ipynb
+++ b/Projekt/Projekt_2/notebookuppgift2.ipynb
@@ -79,24 +79,82 @@
    "execution_count": null,
    "id": "f728de23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           ID komnamn       lannamn  \\\n",
+      "18  2480C1020    Umeå  Västerbotten   \n",
+      "\n",
+      "                                             geometry  \n",
+      "18  MULTIPOLYGON (((763038.335 7085648.577, 762577...  \n"
+     ]
+    }
+   ],
    "source": [
     "import geopandas as gpd\n",
     "\n",
     "zones_path= r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data\\deso_zones_ume.parquet\"\n",
     "net_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data\\roadnet_ume_municipality.parquet\"\n",
     "\n",
-    "gpd.read_parquet(zones_path)\n",
-    "gpd.read_parquet(net_path)"
+    "df_zon=gpd.read_parquet(zones_path);\n",
+    "df_path=gpd.read_parquet(net_path);\n",
+    "\n",
+    "df_zon = df_zon.loc[df_zon[\"ID\"] == \"2480C1020\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5f28410e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df_zon shape: (1, 4)\n",
+      "df_zon columns: ['ID', 'komnamn', 'lannamn', 'geometry']\n",
+      "Geometry type: ['MultiPolygon']\n",
+      "Config laddad från fil\n",
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "895abc1a7f454920847b0d7accdae8c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(config={'version': 'v1', 'config': {'visState': {'layers': [{'config': {'dataId': 'Zones', 'color': […"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from keplergl import KeplerGl\n",
+    "from IPython.display import HTML, display\n",
+    "import os\n",
+    "import pickle\n",
+    "print(\"df_zon shape:\", df_zon.shape)\n",
+    "print(\"df_zon columns:\", df_zon.columns.tolist())\n",
+    "print(\"Geometry type:\", df_zon.geometry.type.unique() if 'geometry' in df_zon.columns else \"No geometry!\")\n",
+    "\n",
+    "config_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\kepler_config.pkl\"\n",
+    "config = pickle.load(open(config_path, 'rb'))\n",
+    "print(\"Config laddad från fil\")\n",
+    "\n",
+    "map = KeplerGl(height=920, config=config)    #Skapa en kepler karta.\n",
+    "map.add_data(data=df_zon.copy(), name='Zones')   #Lägg till en tabell som kartan kan använda.\n",
+    "map\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
