Finalisering Del 1 Start Del 2

--- a/Projekt/Projekt_2/notebookuppgift2.ipynb
+++ b/Projekt/Projekt_2/notebookuppgift2.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "f728de23",
    "metadata": {},
    "outputs": [
@@ -102,18 +102,12 @@
     "\n",
     "links_in_zone = gpd.sjoin(df_path, df_zon_vald, how='inner', predicate='intersects')\n",
     "print(f\"Antal länkar i zonen: {len(links_in_zone)}\")\n",
-    "print(\"Kolumner i links_in_zone:\", links_in_zone.columns.tolist())\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"Kolumner i links_in_zone:\", links_in_zone.columns.tolist())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "61d69ade",
    "metadata": {},
    "outputs": [
