--- a/Projekt/Projekt_2/notebookuppgift2.ipynb
+++ b/Projekt/Projekt_2/notebookuppgift2.ipynb
@@ -134,7 +134,8 @@
     "ax = df_geo_work.plot(column='Sysselsatt', cmap='OrRd', legend=True, figsize=(10,10),\n",
     "                 missing_kwds={'color': 'lightgrey', 'label': 'saknas'})\n",
     "ax.set_title('arbetspalatser per zon i umeå kommun')\n",
-    "ax.set_axis_off()"
+    "ax.set_axis_off()\n",
+    "print(df_geo_work)"
    ]
   }
  ],
