--- a/Projekt/Projekt_2/notebookprojekt2framtidsscenario.ipynb
+++ b/Projekt/Projekt_2/notebookprojekt2framtidsscenario.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "98848b1a",
+   "metadata": {},
+   "source": [
+    "**Inledning**\n",
+    "\n",
+    "\n",
+    "Följande rapport är ett försök att, genom att använda riktig data, visualisera och beskriva Umeås befolkningsutveckling, både historiskt och i form av ett framtidsscenario fram till 2045. Historisk data från SCB har samlats in, strukturerats och sammanställts för att sedan visualiseras med hjälp av Python och bibliotek som Plotly Express. För att ge en rumslig dimension till analysen har även geografisk data hämtats och bearbetats med biblioteket Geopandas.\n",
+    "\n",
+    "Befolkningsprognosen har gjorts utifrån den historiska data, där  applicera statistisk regression för att uppskatta framtida värden fram till år 2045. Huvudsakligen har minsta kvadratmetoden tillämpats med hjälp av Statsmodels API. Denna metod har valts för att, baserat på de identifierade historiska trenderna, skapa en kvantitativ modell som kan projicera utvecklingen framåt under antagandet att vissa strukturella förutsättningar förändras långsamt. Rapporten strävar efter att inte bara presentera siffror, utan att genom visualiseringar göra dessa trender och prognoser tydliga och och kanske få någon insikt till bakomliggande trender eller intressanta korrelationer.  \n",
+    "\n",
+    "Denna rapport är inte ett försök att göra en fullständig och helt rigorös prognos eller exakt framtidsscenario, och disskusion om rapportens begränsiningar kommer vara en viktig del av arbetet. Rapportens syfte är även att personligen lära sig använda python kunna hantera och visualisera riktig data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "964162e3",
    "metadata": {},
    "source": [
@@ -13,12 +28,50 @@
    "id": "4cd0bc5d",
    "metadata": {},
    "source": [
-    "Umeås historiska befolkningsutveckling "
+    "För att börja prognostisera Umeås befolkningsutveckling till 2045 behöver man först diskutera Umeås historiska utveckling och vilken relevans detta har för framtiden. Umeå har en lång och bitvis knackig historia där staden har brunnit ned och återuppbyggts flera gånger senast 1888. Det är även en historiskt planerad stad där strukturerade planer har skapats och genomförts som en reaktion på stora händelser som bränderna.\n",
+    "\n",
+    "Något som börjar likna den moderna staden börjar ta form under 1950 talet, med det som historiskt sett har drivit stadens befolkningsutveckling och näringsliv fram tills idag som ett centrum för industri, utbildning och sjukvård. Det är delvis därför statistik från 1950 kommer användas för att göra en befolkningsprognos för Umeå, det är också från detta datum och framåt som befolkningsstatistik kommer användas för att göra en prognos för kommunen, dels för att de underliggande faktorerna inte är så annorlunda och för att det är från detta datum som detaljerad statistik för varje år i Sveriges alla kommuner finns tillgängligt hos SCB. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
+   "id": "b8938323",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "import plotly.express as px;\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from shapely import wkb\n",
+    "\n",
+    "dagbef_tid_area_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\dagbef_area.xlsx\"\n",
+    "df_combined_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\deso_ume_combined.parquet\"\n",
+    "bef_tid_lang_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\be0101_folkmangdkom2024.xlsx\"\n",
+    "bef_tid_kort_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\befolkningsfoeraendringar-helar.parquet\"\n",
+    "nattbef_tid_area_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\nattbef_area.xlsx\"\n",
+    "\n",
+    "bef_tid_kort = pd.read_parquet(bef_tid_kort_path)\n",
+    "nattbef_tid_area = pd.read_excel(nattbef_tid_area_path)\n",
+    "bef_tid_lang = pd.read_excel(bef_tid_lang_path)\n",
+    "dagbef_tid_area = pd.read_excel(dagbef_tid_area_path)\n",
+    "df_combined = pd.read_parquet(df_combined_path)\n",
+    "df_combined['geometry'] = df_combined['geometry'].apply(wkb.loads)\n",
+    "df_combined = gpd.GeoDataFrame(df_combined, geometry='geometry')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e29a7fe",
+   "metadata": {},
+   "source": [
+    "Koden ovan läser in alla biblotek och filer som behövs för koden och datan som kommer underligga prognoserna. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bf2aff94",
    "metadata": {},
    "outputs": [
@@ -1013,24 +1066,7 @@
     }
    ],
    "source": [
-    "import geopandas as gpd\n",
-    "import plotly.express as px;\n",
-    "import pandas as pd\n",
-    "from shapely import wkb\n",
     "\n",
-    "dagbef_tid_area_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\dagbef_area.xlsx\"\n",
-    "df_combined_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\deso_ume_combined.parquet\"\n",
-    "bef_tid_lang_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\be0101_folkmangdkom2024.xlsx\"\n",
-    "bef_tid_kort_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\befolkningsfoeraendringar-helar.parquet\"\n",
-    "nattbef_tid_area_path = r\"C:\\Users\\fabia\\AH1023\\Projekt\\Projekt_2\\data2\\nattbef_area.xlsx\"\n",
-    "#visualisering av umeås historiska befolkningsutveckling användninga av scatter plot\n",
-    "bef_tid_kort = pd.read_parquet(bef_tid_kort_path)\n",
-    "nattbef_tid_area = pd.read_excel(nattbef_tid_area_path)\n",
-    "bef_tid_lang = pd.read_excel(bef_tid_lang_path)\n",
-    "dagbef_tid_area = pd.read_excel(dagbef_tid_area_path)\n",
-    "df_combined = pd.read_parquet(df_combined_path)\n",
-    "df_combined['geometry'] = df_combined['geometry'].apply(wkb.loads)\n",
-    "df_combined = gpd.GeoDataFrame(df_combined, geometry='geometry')\n",
     "# select Excel row 245 (1-based)\n",
     "bef_tid_lang = bef_tid_lang.iloc[[4,243]]\n",
     "# Extract years from row 4 and population data from row 243\n",
@@ -1048,7 +1084,7 @@
    "id": "0017e5f0",
    "metadata": {},
    "source": [
-    "Analys av visualisering"
+    "Denna visualisering visar Umeå kommuns historiska befolkningsutveckling mellan 1950 och utifrån SCBs data 2024. Som det går att se har Umeås befolkningsutveckling varit väldigt nära en linjär utveckling de senaste 75 åren. Med enstaka platåer under exempelvis 90 talet.Det ser därmed ut som att en linjär regression skulle vara en bra modell för att göra en prediktion av Umeås befolkning till 2045."
    ]
   },
   {
@@ -2774,12 +2810,16 @@
    "id": "2d46b079",
    "metadata": {},
    "source": [
-    "Som det går att se i figuren har befolknigen i de omkringliggande kommunerna kring Umeå legat på en mycket stabil nivå och har i vissa fall minskat eller ökat mycket gradvis. Eftersom de omkringliggand ekommunerna inte följt Umeås utveckling kommer framtidsprognosen till 2045 för befolkning inte smeta ut umeås procentuella befolkningsökning på de om krigliggande kommunerna. I framtidsprognosen kommer de omkringliggande vara oförändrade."
+    "Denna graf över befolkningen över samma tidsperiod i omkringliggande kommuner som är med i det givna  studieområdet använder samma dataset som innehåller befolkning för varje kommun. \n",
+    "\n",
+    "Denna graf ger ett annat intryck. Som det går att se i figuren har befolkningen i de omkringliggande kommunerna kring Umeå legat på en mycket stabil nivå och har i vissa fall minskat eller ökat mycket gradvis. Eftersom de omkringliggande kommunerna inte följt Umeås utveckling kommer framtidsprognosen till 2045 för befolkning inte smeta ut Umeås procentuella befolkningsökning på de om kringliggande kommunerna. I framtidsprognosen kommer de omkringliggande kommunerna därför vara oförändrade.\n",
+    "\n",
+    "Det ska dock medges att Vännäs kommun ökat sin befolkning något men under de senaste 15 åren. Men från ett längre perspektiv har kommunen knappt kommit över sin höjdpunkt på 50-talet och detta kan mycket väl vara en av de cykliska upp och nedgångar som man kan se i grafen i kommunen under 50 och 90 talet. Så antagandet att Umeås omkringliggande kommuner inte ökar kvarstår."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "a049f6c9",
    "metadata": {},
    "outputs": [
@@ -3692,10 +3732,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "\n",
     "import statsmodels.formula.api as smf\n",
-    "import plotly.express as px\n",
+    "\n",
     "\n",
     "# Konvertera years och population till numeriska värden\n",
     "years_num = pd.to_numeric(years, errors='coerce').astype(int)\n",
@@ -3757,12 +3796,14 @@
    "id": "1a985e54",
    "metadata": {},
    "source": [
-    "Med perediktionen i ser vi att befoklningen i Umeå kommunn enligt modellen blir 159 098 personer år 2045 "
+    "Med perediktionen i ser vi att befoklningen i Umeå kommunn enligt modellen blir 159 098 personer år 2045 byggd på statsmodels formula api med data från den tidigare historiska datan. Som vi kan se är är modellen linjär. Och den verkliga datan följer mycket nära predikterade värden. Vilket understryks av moddelens förklaringsgrad med ett R2 värde på 0,998 vilket är väldigt högt. Alltså värdet modellen ökar för varje år är mycket nära verkligheten. Men modellen är väldigt enkel och enda variablen är året. \n",
+    "\n",
+    "Det skulle kunna gå att försöka hitta fler variabler att basera modellen på men eftersom den historiska utvecklingen varit så linjär så länge och inte haft några stora variationer. Om Umeås historiska befolkningsutveckling varit mindre stabli hade kanske fler variabler varit relevant. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "5c2de2d1",
    "metadata": {},
    "outputs": [
@@ -3775,6 +3816,7 @@
     }
    ],
    "source": [
+    "# Tar df_obs och df_pred för att beräkna förändringsfaktor mellan sista observerade och predikterade värden\n",
     "last_obs = df_obs['value'].dropna().iloc[-1]\n",
     "last_pred = df_pred['value'].dropna().iloc[-1]\n",
     "f_faktor = np.nan if last_obs == 0 else (last_pred / last_obs)\n",
@@ -3782,8 +3824,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e2a80ad",
+   "metadata": {},
+   "source": [
+    "Koden här tar befolkningsvärdet för 2024 och det predikerade värdet för 2045 och räknar ut förändringsfaltorn däremllan. Detta ger en procentuell ökning på 18 procent mellan 2024 och 2025. denna förändringsfaktor kommer sedan användas för att beräkna en befolkning för de olika DESO områdena i Umeå kommun."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "11f6389a",
    "metadata": {},
    "outputs": [
@@ -4055,12 +4105,20 @@
     "df_combined['total pred'] = df_combined['total']\n",
     "mask = df_combined['komnamn'].str.contains('Umeå', case=False, na=False)\n",
     "df_combined.loc[mask, 'total pred'] = df_combined.loc[mask, 'total pred'] * float(f_faktor)\n",
-    "#explore \n",
+    "#printa översta raderna \n",
     "print(df_combined[['DESO', 'komnamn', 'total', 'geometry', 'total pred']].head())\n",
     "\n",
-    "# Set CRS to SWEREF99 TM (EPSG:3006) before transforming\n",
+    "# Set CRS till SWEREF99 TM (EPSG:3006) före explore\n",
     "df_combined = df_combined.set_crs('EPSG:3006')\n",
     "df_combined.explore()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47201e4c",
+   "metadata": {},
+   "source": [
+    "Koden här gör flera saker, den skapar en till kolumn i Data Framen som innehåller befolknings och arbetsplatsinfo för varje DESO område, denna kolloumn total pred tar värden för total befolkning för varje DESO område väljer ut de i Umeå kommun multiplicerat med förändringsfaktorn. Då får vi ett nytt vrde för varje deso område i Umå med oförändrat iomkringliggande kommuner. Att lämna omkringliggande kommuner oförändrade har redan diskuterats men att slå över samma procentuella ökning i befolkning på alla DESO områden i Umeå har har sina för och nackdelar.  "
    ]
   },
   {
